[gd_scene load_steps=13 format=3 uid="uid://c2u7ov8ewqpoa"]

[ext_resource type="Script" uid="uid://dr6f202ig0ixe" path="res://scripts/bullet/bullet_016_cob_cannon.gd" id="1_ymsek"]
[ext_resource type="Texture2D" uid="uid://c0b2nxclwkjxn" path="res://assets/reanim/CobCannon_cob.png" id="2_caf80"]
[ext_resource type="Texture2D" uid="uid://c54er6fxpmcc8" path="res://assets/image/projectile/pea_shadows.png" id="2_w6ttn"]
[ext_resource type="Script" uid="uid://l0umdgng0y2m" path="res://scripts/character/components/bomb_component/component_bomb_norm.gd" id="4_e6ktu"]
[ext_resource type="Script" uid="uid://ofqutiv0x4ke" path="res://scripts/fx/plant_effect/plant_effect_006_bomb_con_cannon.gd" id="5_nsvt0"]
[ext_resource type="Texture2D" uid="uid://dvjyos6h31dsr" path="res://assets/image/particles/bullet/BlastMark.png" id="6_l1osl"]
[ext_resource type="Texture2D" uid="uid://c2bnelgwkkidj" path="res://assets/image/main_game_item/CobCannon_popcorn.png" id="7_ymsek"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5gh3"]
size = Vector2(250, 200)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0mq3m"]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id="Curve_w6ttn"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.748837, 0.764045), -1.29414, -1.29414, 0, 0, Vector2(1, 0), -2.16144, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_e6ktu"]
curve = SubResource("Curve_w6ttn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nsvt0"]
emission_shape_offset = Vector3(0, -10, 0)
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector3(0, 1, 0)
spread = 180.0
initial_velocity_min = 30.0
initial_velocity_max = 130.0
gravity = Vector3(0, 30, 0)
scale_min = 0.5
scale_max = 1.5
alpha_curve = SubResource("CurveTexture_e6ktu")
anim_offset_max = 1.0

[node name="Bullet016CobCannon" type="Node2D"]
script = ExtResource("1_ymsek")

[node name="BulletShadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 9)
scale = Vector2(2, 2)
texture = ExtResource("2_w6ttn")
hframes = 2

[node name="Body" type="Node2D" parent="."]
rotation = -1.5708

[node name="BulletBody" type="Sprite2D" parent="Body"]
texture = ExtResource("2_caf80")

[node name="BombComponent" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_e6ktu")
can_attack_plant_status = 7
can_attack_zombie_status = 31

[node name="Area2DBomb" type="Area2D" parent="BombComponent"]
collision_layer = 0
collision_mask = 20
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BombComponent/Area2DBomb"]
shape = SubResource("RectangleShape2D_f5gh3")

[node name="BombEffect" type="Node2D" parent="BombComponent"]
visible = false
position = Vector2(0, -28)
script = ExtResource("5_nsvt0")

[node name="BlastMark" type="Sprite2D" parent="BombComponent/BombEffect"]
z_index = -1
position = Vector2(4, 37)
texture = ExtResource("6_l1osl")

[node name="GPUParticles2D" type="GPUParticles2D" parent="BombComponent/BombEffect"]
material = SubResource("CanvasItemMaterial_0mq3m")
position = Vector2(0, 28)
emitting = false
amount = 30
texture = ExtResource("7_ymsek")
one_shot = true
explosiveness = 1.0
draw_order = 0
process_material = SubResource("ParticleProcessMaterial_nsvt0")
